Fix spacing and restyle project thumbnails

--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,21 @@ li.email {
 li.email a:link {
     color: rgb(254, 254, 254);
 }
+.pj_view-more_thumbs article h3 {
+	width: 100%;
+	height: 6rem;
+    padding: 1rem 0.5rem;
+    position: absolute;
+    top: 0;
+	background: -moz-linear-gradient(top, rgba(2,10,16,0.9) 0%, rgba(2,10,16,0.8) 60%, rgba(2,10,16,0) 100%);
+	background: -webkit-linear-gradient(top, rgba(2,10,16,0.9) 0%,rgba(2,10,16,0.8) 60%,rgba(2,10,16,0) 100%);
+	background: linear-gradient(to bottom, rgba(2,10,16,0.9) 0%,rgba(2,10,16,0.8) 60%,rgba(2,10,16,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6020a10', endColorstr='#00020a10',GradientType=0 );
+}
+.pj_view-more_thumbs article h3 a {
+	width: 100%;
+	height: 100%;
+}
 /* ========== END Project Styles ========== */
 /* ========== Blog Index Styles ========== */
 .blog main,
